[workspace]
members = [
    "blinky",
    "button_pressed",
    "hello_world",
    "st7789",
]
resolver = "2"

[workspace.dependencies.esp-hal]
version = "1.0.0"
features = [
    "esp32",
    "unstable",
]
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
