[package]
edition = "2024"
name = "button_pressed"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "button_pressed"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = ["esp32"] }

